# Weather-Monitoring-App

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  dump.rdb
.github/workflows/: main.yaml
backend/: .env.example  .gitignore  pyproject.toml  weather_monitoring.db
backend/app/: Makefile  celery_app.py  main.py  redis_client.py  requirements.txt  weather_monitoring.db
backend/app/alembic/: env.py
backend/app/alembic/versions/: 5d4b8f61497b_create_users_table.py  68b0433a3ab3_add_weather_table.py  69c250475a21_create_subscription_table.py  a51ead485c2c_create_alert_table.py
backend/app/api/: deps.py  main.py
backend/app/api/endpoints/: subscribe.py  user.py  weather.py
backend/app/celery_tasks/: tasks.py
backend/app/core/: config.py  db.py  security.py
backend/app/crud/: subscribe.py  user.py  weather.py
backend/app/mailingsys/: mailer.py
backend/app/models/: __init__.py  alert.py  subscription.py  user.py  weather.py
backend/app/schemas/: __init__.py  alert.py  api_tags.py  subscribe.py  user.py  weather.py
backend/app/services/: subscribe.py  user.py  weather.py
backend/app/tests/: conftest.py  locustfile.py
backend/app/tests/fuzz/: test_user_fuzz.py  test_user_schema_fuzz.py
backend/app/tests/integration/: test_user_endpoints.py
backend/app/tests/integration/api/endpoints/subscribe/: test_subscribe_api.py
backend/app/tests/integration/api/endpoints/weather/: test_get_current_weather_router.py
backend/app/tests/integration/main/: test_health_check.py
backend/app/tests/integration/services/: test_user_integration.py
backend/app/tests/ui/: test_subscription_flow.py  test_ui_basic.py  test_ui_edge_cases.py
backend/app/tests/unit/celery_tasks/tasks/: test_check_and_trigger_alerts_existing_alert.py  test_check_and_trigger_alerts_no_weather.py  test_check_and_trigger_alerts_trigger_alert.py  test_send_subscription_email.py  test_send_weather_alert_email.py  test_tasks.py  test_update_all_weather_data.py  test_update_weather_data.py
backend/app/tests/unit/core/: test_config.py  test_db.py
backend/app/tests/unit/core/security/: test_token_generation.py
backend/app/tests/unit/crud/: test_is_subscribed.py
backend/app/tests/unit/services/: test_user_subscribe.py  test_weather.py
backend/app/tests/unit/services/user/: test_hash_password.py  test_services_user.py
backend/app/tests/unit/utils/: test_store_weather_data.py
backend/app/utils/: weather.py
frontend/: .coverage  Makefile  auth.py  dashboard.py  pyproject.toml
frontend/tests/ui/: test_ui_authentication.py  test_ui_dashboard.py
performance_report/: Locust_2025-05-06-21h37_locustfile.py_http___localhost_8000.html  Locust_2025_05_06_21h37_locustfile_py_http_localhost_8000_failures.csv  Locust_2025_05_06_21h37_locustfile_py_http_localhost_8000_requests.csv
